--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FamilyMembers"></activity>
+        <activity android:name=".userProfile"></activity>
+        <activity android:name=".FamilyMembers" />
         <activity android:name=".AddMemberForm" />
         <activity android:name=".whoAreYou" />
         <activity android:name=".MembersEmpty" />
